# my_neovim_config

./: .gitignore  .tmux.conf  README.md  init.lua  test.cpp  test.py
after/syntax/: cpp.vim  json.vim  lua.vim  python.vim  sh.vim  xml.vim  yaml.vim
lua/: blankline-setup.lua  bufferline-setup.lua  init-lsp.lua  init-packer.lua  init-toggleterm.lua  init-treesitter.lua  keybindings.lua  lualine-setup.lua  nvim-tree-setup.lua  nvim-ufo.lua  packer-plugins.lua  symbols-outline-setup.lua  treesitter-setup.lua
lua/plugins/: keybindings.lua  nvim-tree-setup.lua  toggleterm-setup.lua
lua/plugins/user/dap/: dap-cpp.lua  dap-ui.lua
lua/plugins/user/lsp/: init.lua
lua/user/: general.lua  keybindings.lua
lua/user/dap/: dap-config.lua  dap-cpp.lua  dap-python.lua  dap-ui.lua  init.lua
lua/user/lsp/: cmp.lua  config.lua
plugin/: packer_compiled.lua
test/: CMakeLists.txt  test.cpp  test.py
test/cpp/: CMakeLists.txt  compile_commands.json  test.cpp
test/cpp/.cache/clangd/index/: math.cpp.FACFEF93F15614B8.idx  math.h.EE12074254235B4E.idx  test.cpp.B6AC975BBDFF484D.idx
test/cpp/inc/math/: math.h
test/cpp/src/math/: math.cpp
test/json/: test.json
test/mako/: test.mako
test/python/: somem.py  test.py
test/sh/: test.sh
test/xml/: test.xml
test/yaml/: test.yaml
